# demos

./: .gitignore  README.md  controller.py  requirements.txt  server.py  start_web_app.py
static/js/: app.js
tabracadabra/: README.md  pyproject.toml
tabrywhere/: .env.example  .gitignore  README.md  main.py  tab_prompt.txt
